--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -175,7 +175,7 @@
     "insertPath": "Insert the path",
     "userUpdated": "User updated!",
     "userDefaults": "User default settings",
-    "defaultUserDescription": "This are the default settings for new users.",
+    "defaultUserDescription": "These are the default settings for new users.",
     "executeOnShell": "Execute on shell",
     "executeOnShellDescription": "By default, File Browser executes the commands by calling their binaries directly. If you want to run them on a shell instead (such as Bash or PowerShell), you can define it here with the  required arguments and flags. If set, the command you execute will be appended as an argument. This apply to both user commands and event hooks.",
     "perm": {
